--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
 
-    <meta property="og:title" content="Facebook Open Graph META Tags"/>
+  <meta property="og:title" content="Facebook Open Graph META Tags"/>
 	<meta property="og:image" content="http://hieubkcse.github.io/Assignment1-EC-151-/img/wallpaper.jpg"/>
 	<meta property="og:site_name" content="Snake game"/>
 	<meta property="og:description" content="Assignment for EC-151"/>
@@ -24,10 +24,10 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div id="fb-root"></div>
+    <!-- <div id="fb-root"></div>
      <div id="loginfb">
         <button class="fb-login-button btn btn-primary" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions" ></button>
-        </div>
+        </div> -->
     <section class="buttons">
       <div class="container">
         <h1>Snake Game</h1>
