--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
 
-  <meta property="og:title" content="Facebook Open Graph META Tags"/>
-	<meta property="og:image" content="http://hieubkcse.github.io/Assignment1-EC-151-/img/wallpaper.jpg"/>
+  <meta property="og:title" content="Snake game"/>
+	<meta property="og:image" content="http://hieubac1511.github.io/img/wallpaper.jpg"/>
 	<meta property="og:site_name" content="Snake game"/>
-	<meta property="og:description" content="Assignment for EC-151"/>
+	<meta property="og:description" content="Assignment for EC-152"/>
     <title>Snake HTML game</title>
     <script type="text/javascript" src = "js/jquery-1.11.3.min.js"></script>
     <script>
@@ -24,10 +24,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <!-- <div id="fb-root"></div>
-     <div id="loginfb">
-        <button class="fb-login-button btn btn-primary" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true" data-scope="publish_actions" ></button>
-        </div> -->
     <section class="buttons">
       <div class="container">
         <h1>Snake Game</h1>
@@ -42,7 +38,7 @@
             <a  class="btn button button-how" data-toggle="modal" data-target="#howToPlayModal">How to Play</a>
           </div>
         </div>
-        <p>Share with <a href="https://www.facebook.com/dialog/feed?app_id=992532850788565&link=http://snake-game.co.nr&redirect_uri=http://hieubkcse.github.io/Assignment1-EC-151-/" target="_blank">Facebook</a></p>
+        <p>Share with <a href="https://www.facebook.com/sharer/sharer.php?u=http://hieubac1511.github.io" target="_blank">Facebook</a></p>
       </div>
       <!-- <div class="fb-like row col-md-12" data-share="true" data-width="450" data-show-faces="true"></div>  -->
     </section>
